# checks

./: .gitignore  .luacheckrc  .travis-ci.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  checks-1.0-1.rockspec  checks-1.0-2.rockspec  checks-scm-1.rockspec  checks.c  checks.h  checks.lua  perftest.lua  test.lua  tests-v1.0.lua  tests.lua  travis-run-tests.sh
.github/workflows/: packaging.yml  push_rockspec.yml  reusable_testing.yml  test.yml
checks/: version.lua
cmake/: FindTarantool.cmake
debian/: changelog  control  copyright  prebuild.sh  rules  tarantool-checks.install
rockspecs/: checks-1.0.0-1.rockspec  checks-1.0.1-1.rockspec  checks-1.1.0-1.rockspec  checks-2.0.0-1.rockspec
rpm/: tarantool-checks.spec
test/: helper.lua  rock_utils.lua  test.lua
